refs #55829 - fix overlapping elements

--- a/app/assets/stylesheets/fae/globals/legacy/_pre-1.3.scss
+++ b/app/assets/stylesheets/fae/globals/legacy/_pre-1.3.scss
@@ -121,13 +121,6 @@
   padding-bottom: 5px;
 }
 
-.content-header {
-  ~ .main_content-sections {
-    // height of content header minus 30
-    padding-top: 76px;
-  }
-}
-
 .main_content-header-save,
 .main_content-header-csv {
   margin-top: 30px;
@@ -217,7 +210,7 @@
 
 .content-header-buttons {
   ~ .main_content-header-save {
-    display: none;
+    bottom: 0;
   }
 }
 
